objects/Jira_Issue__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>Creator</label>
    <type>Email</type>
</CustomField>