objects/Jira_Issue__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <label>Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>