objects/Jira_Issue__c/fields/Days_To_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Resolution__c</fullName>
    <label>Days To Resolution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>