objects/Jira_Issue__c/fields/First_Support_Case__c.field-meta.xml
<CustomField>
    <fullName>First_Support_Case__c</fullName>
    <description>This is the Case number of the first Case that initiated the creation of this Jira in the Corp Jira instance.</description>
    <inlineHelpText>This is the Case number of the first Case that initiated the creation of this Jira in the Corp Jira instance.</inlineHelpText>
    <label>First Support Case</label>
    <length>10</length>
    <type>Text</type>
</CustomField>