objects/Jira_Issue__c/fields/Issue_Created__c.field-meta.xml
<CustomField>
    <fullName>Issue_Created__c</fullName>
    <label>Issue Created</label>
    <type>DateTime</type>
</CustomField>