objects/Jira_Issue__c/fields/Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Id__c</fullName>
    <label>Issue Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>