objects/Jira_Issue__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <label>Issue Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>