objects/Jira_Issue__c/fields/Issue_Project__c.field-meta.xml
<CustomField>
    <fullName>Issue_Project__c</fullName>
    <label>Issue Project</label>
    <length>128</length>
    <type>Text</type>
</CustomField>