objects/Jira_Issue__c/fields/Issue_REST_URL__c.field-meta.xml
<CustomField>
    <fullName>Issue_REST_URL__c</fullName>
    <label>Issue REST URL</label>
    <type>Url</type>
</CustomField>