objects/Jira_Issue__c/fields/Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status__c</fullName>
    <label>Issue Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>