objects/Jira_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>