objects/Jira_Issue__c/fields/Issue_Updated__c.field-meta.xml
<CustomField>
    <fullName>Issue_Updated__c</fullName>
    <label>Issue Updated</label>
    <type>DateTime</type>
</CustomField>