objects/Jira_Issue__c/fields/Issue_URL__c.field-meta.xml
<CustomField>
    <fullName>Issue_URL__c</fullName>
    <label>Issue URL</label>
    <type>Url</type>
</CustomField>