objects/Jira_Issue__c/fields/Num_Votes__c.field-meta.xml
<CustomField>
    <fullName>Num_Votes__c</fullName>
    <label>Num Votes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>