objects/Jira_Issue__c/fields/Num_Watchers__c.field-meta.xml
<CustomField>
    <fullName>Num_Watchers__c</fullName>
    <label>Num Watchers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>