objects/Jira_Issue__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <label>Reporter</label>
    <type>Email</type>
</CustomField>