objects/Jira_Issue__c/fields/Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date__c</fullName>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>