objects/Jira_Issue__c/fields/Resolution_Name__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Name__c</fullName>
    <label>Resolution Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>