objects/Jira_Issue__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>32</length>
    <type>Text</type>
</CustomField>